# PythonScripts

./: README.md  pyproject.toml
scripts/: find_esp32.py  generate_password.py
scripts/encoding/: convert-base64.py  convert-url.py
scripts/images/: convert.py  create_pdf.py  exif.py
scripts/pdf/: extract.py
scripts/reference/: dictionary.py  unicode.py
